Thu Jul 22 17:39:41 2004  Steve Huston  <shuston@riverace.com>

	* modules/AutomakeWorkspaceCreator.pm: When writing
	  configure.ac.Makefiles, insert entries for project-less directories
	  between project-containing directories. Allows the bootstrap
	  procedure to find and make the needed Makefiles to traverse the
	  entire build tree.

	* templates/automake.mpd: Changed _LIBADD to _LDADD for programs.

Thu Jul 22 12:52:39 2004  Steve Huston  <shuston@riverace.com>

	* modules/AutomakeWorkspaceCreator.pm: If there's no local project
	  info for the current Makefile.am, don't put the initial bin_PROGRAMS,
	  lib_LTLIBRARIES, etc. If there are local projects, add "." to the
	  SUBDIRS.

	* templates/automake.mpd: Add _LIBADD settings to pick up needed
	  libraries.

Wed Jul 21 19:34:46 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* modules/AutomakeProjectCreator.pm:
	  Override expand_variables_from_template_values.

	* modules/AutomakeWorkspaceCreator.pm: Don't emit SUBDIRS
	  definition if there aren't any subdirectories.

	* templates/automake.mpd: Simplify so that _CPPFLAGS, etc.
	  settings are not duplicated for programs and libraries,
	  grouped and non-grouped source files, etc.

Wed Jul 21 18:02:31 2004  Steve Huston  <shuston@riverace.com>

	* templates/automake.mpd: Added the _CPPFLAGS setting to the
	  non-grouped library section.

Wed Jul 21 17:04:39 2004  Steve Huston  <shuston@riverace.com>

	* modules/AutomakeWorkspaceCreator.pm: In write_comps(), combine all
	  of the current directory level's Makefile.<project>.am files into
	  the directory's Makefile.am file and delete the individual files.
	  Write only the Makefile.am file paths into the configure.ac.Makefiles
	  list. This is because the previous loop-through-current-Makefile
	  scheme sent make into an infinite loop, consuming all process
	  slots very quickly. The generated Makefiles always like to start
	  again at the top Makefile to check its updatedness, even if